# CodingAgent-SessionBridge

./: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: pr-check.yml  release.yml
assets/: 1.jfif
scripts/: clean-dist.mjs  clean-release-exe.mjs  package-portable-win.mjs  package-portable.mjs  package-win.mjs  prepare-icons.mjs  prepare-ui-assets.mjs  release-notes.mjs  smoke.ts  stage-versioned-bundles.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/xfer/: claude_parse.rs  codex_parse.rs  db.rs  index.rs  migrate.rs  mod.rs  model.rs  paths.rs  session_ops.rs  settings.rs  sync.rs  sync_state.rs  write.rs
src/app/: bridge.ts
src/cli/: index.ts
src/core/: index.ts  logging.ts  migrate.ts  model.ts  paths.ts  render.ts  settings.ts  sync-state.ts  sync.ts  watch.ts  write.ts
src/core/claude/: parse.ts
src/core/codex/: parse.ts
src/mcp/: server.ts
src/ui/: index.html
src/ui/src/: api.ts  main.ts  styles.css
src/web/: page.ts  server.ts
